com.unity.searcher@4.6.0-preview ## [4.6.0] - 2020-07-27 - Added support for multi-select, enabled via MultiSelectEnabled in the SearcherAdapter.
## [4.5.0] - 2020-07-15
- Add support for displaying icons in SearcherItem.

## [4.4.0] - 2020-07-13
- Add custom UserData field to SearcherItem.
- Add SearcherTreeUtility to create a SearcherItem tree from a flat list of paths.

--- a/Editor/Resources/SearcherItem.uxml
+++ b/Editor/Resources/SearcherItem.uxml
@@ -5,6 +5,7 @@
     <ui:VisualElement name="itemChildExpander">
       <ui:VisualElement name="expanderIcon"/>
     </ui:VisualElement>
+    <ui:Toggle name="itemToggle"/>
     <ui:VisualElement name="itemIconVisualElement"/>
     <ui:VisualElement name="labelsContainer"/>
   </ui:VisualElement>
