--- a/Editor/Resources/Searcher.uss
+++ b/Editor/Resources/Searcher.uss
@@ -106,8 +106,8 @@
 }
 
 #windowSelectionVisualContainer {
-    flex-direction: row;
     flex: 1;
+    background-color: #383838;
 }
 
 .unity-list-view.focusableScrollView {
@@ -126,17 +126,43 @@
 .unity-list-view > * #labelsContainer {
     flex-direction: row;
     flex: 1;
-    left: 8px;
-    top: -2px;
+    margin-left: 2px;
 }
 
 .unity-list-view > * #labelsContainer > .unity-label {
-    margin-left: 0;
+    margin-left: 0px;
     margin-right: 0;
     padding-left: 0;
     padding-right: 0;
     color: #C4C4C4;
     font-size: 12px;
+}
+
+.unity-list-view > * #itemIconVisualElement {
+    height: 16px;
+    width: 16px;
+    margin-left: 2px;
+    margin-right: 2px;
+    display: none;
+}
+
+#itemToggle {
+    margin-left: 2px;
+    margin-right: 2px;
+    display: none;
+}
+
+.searcher__multiselect #itemToggle {
+    display: flex;
+}
+
+.searcherMultiSelectConfirmButton {
+    display: none;
+    margin: 4px;
+}
+
+.searcher__multiselect .searcherMultiSelectConfirmButton {
+    display: flex;
 }
 
 .unity-list-view > * > .unity-label {
@@ -164,15 +190,15 @@
 }
 
 .unity-list-view > * #itemChildExpander {
-    width: 18px;
     height: 18px;
+    padding-top: 3px;
+    margin-left: 10px;
+    margin-right: 0px;
 }
 
 .unity-list-view > * #itemChildExpander > #expanderIcon {
     width: 13px;
     height: 13px;
-    top: 1px;
-    left: 10px;
 }
 
 #smartSearchItem > * > #itemChildExpander > #expanderIcon.Collapsed {
@@ -201,7 +227,6 @@
 }
 
 .unity-list-view > * #itemMainVisualContainer {
-    padding-top: 3px;
     align-items: center;
 }
 
